<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">GATE</string>

    <string name="title_profile">Profile</string>
    <string name="title_feed">Feed</string>
    <string name="title_bookmarks">Bookmarks</string>

    <!--                Menu_Login                -->

    <string name="userHint">Username</string>
    <string name="passHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="forgotPass">Forgot your <b>password</b>?
    </string>

    <!--                Menu_Register_Page1            -->
    <string name="registerPersInfoText">Personal Information</string>
    <string name="registerFirstNameHint">First Name</string>
    <string name="registerLastNameHint">Last Name</string>
    <string name="registerInstitutionHint">Institution</string>
    <string name="registerEmailHint">E-mail</string>
    <string name="registerInvestigationHint">Area of Investigation</string>
    <string name="registerResearchCenter">Research Center</string>
    <string name="registerORCIDHint">ORCID</string>
    <string name="registerPage1of3">1/3</string>
    <string name="registerNextPage">NEXT</string>

    <string name="registerResearchInterText">Research Interests</string>
    <string name="registerResearchSearch">Search</string>
    <string name="registerButtonPlaceholderText">Placeholder</string>

    <string name="registerAccInfoText">Account Information</string>
    <string name="registerUserNameHint">Username</string>
    <string name="registerPassHint">Password</string>
    <string name="registerConfirmPassHint">Confirm Password</string>
    <string name="registerUploadPhoto">Upload Picture</string>


    <!--            Profile                 -->
    <string name="profileImageDescription">User picture</string>
    <string name="profileUserName">Username</string>
    <string name="profileName">Name</string>
    <string name="profileInstitution">Institution</string>
    <string name="profileResearchUnit">Research Unit</string>
    <string name="profileResearchCenter">Research Center</string>
    <string name="profileResearchInterests">Research Interests</string>


    <!--            Bookmarks               -->
    <string name="bookmarkName">Name</string>
    <string name="bookmarkURL">URL</string>
    <string name="bookmarkTags">Tags</string>

    <string name="allPlaceholderText">[PH]toChange</string>
</resources>
