<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/profile"
        android:descendantFocusability="beforeDescendants"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/profile_background">

    <ImageView
            android:layout_width="43dp"
            android:layout_height="43dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintHorizontal_bias="0.10"
            android:src="@drawable/profile_logout"
            android:id="@+id/profileLeftImage"/>

    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintHorizontal_bias="0.90"
            android:src="@drawable/profile_edit"
            android:id="@+id/profileRightImage"/>

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.075"
            android:src="@drawable/bvn_profile"
            app:civ_border_width="1dp"
            app:civ_border_color="#FFFFFF"/>

    <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.29000002"
            android:text="@string/profileUserName"
            android:textSize="30sp"
            android:textAlignment="center"
            android:id="@+id/profileName"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.375"
            app:layout_constraintHorizontal_bias="0.2"
            android:text="@string/profileName"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/profileUserName"/>

    <EditText
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.41"
            app:layout_constraintHorizontal_bias="0.35"
            android:text="sesetset"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:backgroundTint="@color/transparent"
            android:inputType="textPersonName"
            android:focusable="false"
            android:maxLength="25"
            android:singleLine="true"
            android:id="@+id/profileUserNameInput"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.455"
            app:layout_constraintHorizontal_bias="0.215"
            android:text="@string/profileInstitution"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/profileInstitution"/>

    <EditText
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.495"
            app:layout_constraintHorizontal_bias="0.35"
            android:text="sesetset"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:backgroundTint="@color/transparent"
            android:focusable="false"
            android:maxLength="15"
            android:singleLine="true"
            android:id="@+id/profileInstitutionInput"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.535"
            app:layout_constraintHorizontal_bias="0.232"
            android:text="@string/profileResearchUnit"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/profileResearchUnit"/>

    <EditText
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.578"
            app:layout_constraintHorizontal_bias="0.35"
            android:text="testetset"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:backgroundTint="@color/transparent"
            android:focusable="false"
            android:maxLength="15"
            android:singleLine="true"
            android:id="@+id/profileResearchUnitInput"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.615"
            app:layout_constraintHorizontal_bias="0.247"
            android:text="@string/profileResearchCenter"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/profileResearchCenter"/>

    <EditText
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.66"
            app:layout_constraintHorizontal_bias="0.35"
            android:text="tesetset"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:backgroundTint="@color/transparent"
            android:focusable="false"
            android:maxLength="15"
            android:singleLine="true"
            android:id="@+id/profileResearchCenterInput"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.695"
            app:layout_constraintHorizontal_bias="0.247"
            android:text="@string/profileResearchInterests"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/profileResearchInterests"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="315dp"
            android:layout_height="185dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.975"
            android:id="@+id/profileRecyclerView"/>


</android.support.constraint.ConstraintLayout>